Refactor project structure: remove old files, add new app setup with EJS and dotenv integration

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/abysszero1004-dev/ProjectPortifio#readme",
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "pg": "^8.16.3"
   }
